# opencv_hpx_backend

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
bash/: build_hpx.sh  build_opencv.sh  find_grep.sh  run_opencv_dnn.sh  run_opencv_mandelbrot.sh  run_opencv_tests.sh
examples/: CMakeLists.txt
examples/hpx_image_load/: CMakeLists.txt  config.h.in  hpx_image_load.cpp
examples/hpx_mandelbrot/: CMakeLists.txt  hpx_mandelbrot.cpp
examples/hpx_opencv_webcam/: CMakeLists.txt  hpx_opencv_webcam.cpp
examples/hpx_start_myargv/: CMakeLists.txt
examples/hpx_start_stop/: CMakeLists.txt
examples/opencv_mandelbrot/: CMakeLists.txt  config.hpp.in
examples/qt_hpx_opencv/: .gitignore  CMakeLists.txt  ConcurrentCircularBuffer.hpp  FaceRecogFilter.cpp  FaceRecogFilter.hpp  MartyCam.ini  MartyCam.rc  MotionFilter.cpp  MotionFilter.hpp  capturethread.cpp  capturethread.hpp  filter.cpp  filter.hpp  main.cpp  martycam.cpp  martycam.hpp  martycam.qrc  martycam.ui  processingthread.cpp  processingthread.hpp  qt.cpp  renderwidget.cpp  renderwidget.hpp  resources.qrc  settings.cpp  settings.hpp  settings.ui  widget.cpp  widget.hpp
examples/qt_with_cmake/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.ui
experiments/2018-06-10-all_over_workload-hpx_over_pus/plots/: Parallel_processing_time_as_function_of_image_size  Parallel_processing_time_as_function_of_number_of_PUs  Sequential_processing_time_as_function_of_image_size  Speed-up_as_function_of_image_size  Speed-up_as_function_of_number_of_PUs
experiments/2018-06-14-nstripes/: nstripes_data.ods
experiments/2018-06-15-15.08-all_over_nstripes/: readme.txt
experiments/2018-07-17-17.15-dnn-test/: 2018-07-17-17.15-perf_dnn_hpx-4thr-1000000milc-1000000mibt.xml  2018-07-17-17.15-perf_dnn_hpx-4thr.csv  2018-07-17-17.15-summary-all-dnn.html  2018-07-17-17.15-summary-all-dnn.html.html  2018-07-17-17.18-perf_dnn_pthreads_master-4thr.xml  2018-07-17-17.18-perf_dnn_pthreads_master-4thr_dsts.csv  2018-07-17-17.21-perf_dnn_tbb-4thr.xml  2018-07-17-17.21-perf_dnn_tbb-4thr_dsts.csv  2018-07-17-17.24-perf_dnn_omp-4thr.xml  2018-07-17-17.24-perf_dnn_omp-4thr_dsts.csv  run_opencv_dnn.sh
hpx_image_load/: CMakeLists.txt  hpx_image_load.cpp  hpx_image_load.hpp
hpx_io_pool/: CMakeLists.txt  hpx_io_pool.cpp
hpx_mandelbrot/: CMakeLists.txt  hpx_mandelbrot.cpp  hpx_mandelbrot.hpp
hpx_opencv_webcam/: CMakeLists.txt  hpx_opencv_webcam.cpp
hpx_oversubscribe/: CMakeLists.txt  hpx_oversubscribe.cpp
hpx_start_myargv/: CMakeLists.txt  hpx_start_myargv.cpp
hpx_start_stop/: CMakeLists.txt  start_stop.cpp
opencv_mandelbrot/: CMakeLists.txt  config.hpp.in  opencv_mandelbrot.cpp
python/mandelbrot_benchmark/: mandelbrot_benchmark.py
